Fix contrast color on toggle circle for dark theme

--- a/src/dark/_color.fluent.scss
+++ b/src/dark/_color.fluent.scss
@@ -127,9 +127,9 @@
     --color-border-toggle-on-disabled: var(--color-text-30);
     --color-border-toggle-off-disabled: var(--color-text-30);
     --color-circle-toggle-on-rest: var(--color-white);
-    --color-circle-toggle-off-rest: var(--color-text-10);
+    --color-circle-toggle-off-rest: var(--color-grey-40);
     --color-circle-toggle-on-hover: var(--color-white); //Size circle reduce to have
-    --color-circle-toggle-off-hover: var(--color-black);
+    --color-circle-toggle-off-hover: var(--color-grey-20);
     --color-circle-toggle-on-focus: var(--color-white);
     --color-circle-toggle-off-focus: var(--color-black);
     --color-circle-toggle-on-disabled: var(--color-text-20);
